[package]
name = "blockchain"
version = "0.1.0"
edition = "2018"

[dependencies]
arrayvec = { version = "0.7", features = ["serde"] }
base58 = "0.1"
common = { path = "../common" }
hex = "0.4"
k256 = { version = "0.9", features = ["keccak256"] }
rand = "0.8"
lazy_static = "1.4"
ripemd160 = "0.9"
rusqlite = "0.25"
r2d2 = "0.8"
r2d2_sqlite = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
thiserror = "1.0"
tracing = "0.1.37"
