[package]
name = "common"
version = "0.1.0"
edition = "2018"

[dependencies]
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-bunyan-formatter = "0.3.7"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
